# easier_apis

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
easier_apis/: __init__.py  core.py
src/: lib.rs
