[package]
name = "easier_apis_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Core functionality for EasierAPIs framework"
license = "MIT"

[lib]
name = "easier_apis_core"
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
